Fix z-index issues on Edge

--- a/docroot/sites/all/themes/ilr_theme/scss/components/_hero.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/components/_hero.scss
@@ -19,6 +19,7 @@
         background: $lighter-red;
         margin-top: -1rem;
         z-index: 1;
+        position: relative;
 
         @include small {
           display: grid;
