--- a/docroot/sites/all/themes/ilr_theme/scss/components/_homepage-hero.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/components/_homepage-hero.scss
@@ -57,6 +57,7 @@
 
     h2,
     h3 { // h3 is used as a hack for the knockout background
+      position: relative;
       z-index: 3;
       grid-row: 2 / 3;
       grid-column: 2;
